--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h2>Hello,</h2>
                 <p style="color:black">  My name is <b>Elamaran</b>,<br> and I am a <span style="color:blueviolet"><b>programmer</b></span><br> with a passion for <b>technology</b> and <b>coding</b>.</p>
                 <br>
-                <p style="color:black;text-align:justify;font-size:small;">As a student, I have had the opportunity to learn various programming languages and technologies, including Java, Python, HTML, CSS, JavaScript, and SQL. I am always looking to expand my knowledge and skills, and I am eager to explore new technologies and programming languages.</p>
+                <p style="color:black;text-align:justify;font-size:small;">&nbsp;&nbsp;&nbsp;As a student, I have had the opportunity to learn various programming languages and technologies, including Java, Python, HTML, CSS, JavaScript, and SQL. I am always looking to expand my knowledge and skills, and I am eager to explore new technologies and programming languages.</p>
               </div>
             </div>
           </div>
