--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
         margin-left: 30px;
         margin-right: 30px;
       }
-      h3{
+      h2{
         margin:30px;
-        text-shadow: 0px 0px 5px blueviolet,0px 0px 10px blueviolet;
+        color: blueviolet;
       }
     </style>
 </head>
