--- a/about.html
+++ b/about.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
     <style>
       *{
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        margin: 0;
+        padding: 0;
+        font-family: 'Raleway', sans-serif;
 
       }
       p{
@@ -17,16 +24,92 @@
         margin-left: 30px;
         margin-right: 30px;
       }
+      h1{
+        color: royalblue;
+        margin: 30px;
+      }
       h2{
-        margin:30px;
-        color: blueviolet;
+        margin-top:30px;
+        color: royalblue;
+      }
+      .personal{
+        border: 1px solid royalblue;
+        border-radius: 10px;
+       
+      }
+      #topic{
+        border: 1px solid royalblue;
+        color: black;
+        width: max-content;
+        padding: 10px;
+        border-radius:10px ;
+        margin-bottom: 20px;
+      }
+
+      button{
+        border: none;
+        color: white;
+        padding: 6px;
+        border-radius:3px ;
+        margin-bottom: 20px;
+        background: #120A8F;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+      }
+      button:hover{
+        scale: 1.1;
+        transition: 0.5s;
+
+      }
+      a{
+        text-decoration: none;
+        margin-right: 30px;
+      }
+      svg{
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+      }
+      svg:hover{
+        scale: 1.1;
+        transition: 0.5s;
       }
     </style>
 </head>
 <body>
-  <h2>About Me</h2>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;My name is Elamaran.E, and I am a student pursuing a Bachelor of Technology (B.Tech) degree in Information Technology. I have a keen interest in programming and the vast opportunities it presents in today's technology-driven world.</p>
+  <center>
+    <h1><b>About me</b></h1>
+  </center>
+
   <br>
+  <div id="personal"class="personal m-3 p-3">
+    <center>
+      <h2 id="topic"><b>Personal Info</b></h2>
+    </center>
+
+    <p>ELAMARAN E</p>
+    <p>Mobile No: +91 9025893850</p>
+    <P>
+      S/O,&nbsp;Elangovan,&nbsp;1234,&nbsp;South Street,
+      &nbsp;Melaneduvai,&nbsp;Andimadam (Tk),
+      Ariyalur (Dt). &nbsp;Pin code - 621801
+
+    </P>
+    <p>Date of birth : 28.08.2004</p>
+    <p>Gender : Male</p>
+    <p>Marital Status : Single</p>
+    <p>Nationality : Indian</p>
+    <p>Languages Known : Tamil & English</p>
+    <br>
+    <center>
+      <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="#120A8F" class="bi bi-linkedin" viewBox="0 0 16 16">
+        <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+      </svg>
+    </a>
+
+      <button>Download CV</button>
+    </center>
+
+ 
+
+  </div>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;Being an IT student, I am exposed to various aspects of computer science and technology. I have acquired a strong foundation in programming languages such as Java, C++, Python, and web development technologies like HTML, CSS, and JavaScript. Through my coursework, I have gained knowledge in software development, data structures, algorithms, databases, and networking.</p>
   <br>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;I find great satisfaction in solving complex problems and developing innovative solutions through programming. The ability to create software applications that can simplify tasks, enhance productivity, and provide practical solutions has always fascinated me. I am constantly seeking to enhance my skills and stay updated with the latest trends and advancements in the field.</p>
@@ -41,6 +124,7 @@
   <br>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;Overall, as a student of B.Tech in Information Technology, I am passionate about programming and the endless possibilities it offers. I am committed to honing my skills, staying updated with emerging technologies, and making meaningful contributions in the field of information technology.</p>
 
+  <br>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
