--- a/projects.html
+++ b/projects.html
@@ -6,48 +6,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
     <style>
       *{
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        margin: 0;
+        padding: 0;
+        font-family: 'Raleway', sans-serif;
       }
-        h2{
+        h1{
           margin: 10px;
           margin-top: 20px;
-          color: blueviolet;
+          color: royalblue;
+        }
+        .h6{
+          border: 1px solid royalblue;
+          padding: 10px;
+          border-radius: 3px;
         }
     </style>
 </head>
 <body>
   <center>
-    <h2>My Projects</h2>
+    <h1><b>My Projects</b></h1>
+  </center>
+  <br>
+  <center>
+    <p class="h6 m-2">“It's still magic even if you know how it's done.”</p>
+    <br>
+    <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="dark" class="bi bi-github" viewBox="0 0 16 16">
+      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+    </svg>
+  </a>
   </center>
 
 
-    <div class="row m-2">
+    <div class="row m-3">
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="./assets/images/car1.jpg" class="card-img-top" alt="...">
+            <img src="./assets/images/weather.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Phish Check</h5>
+              <h5 class="card-title"><b>Weather Meow</b></h5>
+              <p class="card-text">A Python Flask-powered Weather Forecast Website</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./assets/images/lovesvg.svg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><b>Love Detector</b></h5>
+              <p class="card-text">Relationship Compatibility Analyzer with Firebase Integration</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./assets/images/phish.svg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><b>Phish Check</b></h5>
               <p class="card-text">Detecting Phishing Website using Machine Learning. </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="./assets/images/car2.jpg" class="card-img-top" alt="...">
+            <img src="./assets/images/manager.svg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Mr.Manager</h5>
+              <h5 class="card-title"><b>Mr.Manager</b></h5>
               <p class="card-text">Event Management Application with MySQL Database.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="./assets/images/car3.jpg" class="card-img-top" alt="...">
+            <img src="./assets/images/momo.svg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">MoMo</h5>
+              <h5 class="card-title"><b>MoMo</b></h5>
               <p class="card-text">A voice based virtual Assistant with OpenAI API.</p>
             </div>
           </div>
